2003-07-21  Nick Garnett  <nickg@balti.calivar.com>

	* doc/hal.sgml: Reorganized description of clock and timer related
	stuff into their own section and added a piece about how to change
	the clock frequency.

2003-06-25  Nick Garnett  <nickg@balti.calivar.com>

	* src/hal_if.c (delay_us): The first test against
	CYGNUM_KERNEL_COUNTERS_RTC_PERIOD is now against the period
	divided by two. By the time we get to this test we know that usecs
	can never be > usec_per_period/2 so we can double the range of
	period values that we can handle without overflow and use the more
	efficient approximation. The second test is not changed since we
	cannot make the same assumptions about the elapsed count.

2003-06-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/generic-stub.c (crc32): Fix crctable option name typo.

	* src/hal_if.c (hal_if_init): Remove kill_by_reset.
	(kill_by_reset): Remove, unused.
	(reset): ifdef test on HAL_PLATFORM_RESET and assert on reset failure.

	* cdl/interrupts.cdl (CYGNUM_HAL_COMMON_INTERRUPTS_STACK_SIZE): No
	reason to forbid people setting this quite small.
	
2003-06-19  Nick Garnett  <nickg@balti.calivar.com>

	* src/hal_if.c (delay_us): Reorganized to cope with high frequency
	timers by eliminating a source of arithmetic overflow. 

2003-05-06  Mark Salter  <msalter@redhat.com>

	* src/hal_stub.c (handle_exception_exit): Call sys_profile_reset from
	here. Setup to return through return_from_stub() when appropriate.
	(return_from_stub): New function to call CYGACC_CALL_IF_MONITOR_RETURN
	from thread context.

	* src/generic-stub.c (__handle_exception): Call exit_vec if
	hal_syscall_handler returns negative number.

2003-04-08  Mark Salter  <msalter@redhat.com>

	* src/hal_misc.c (hal_default_isr): Allow HAL to override default
	GDB vector matching test.

2003-04-08  Yoshinori Sato  <qzb04471@nifty.ne.jp>
2003-04-08  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/debugging.cdl: Allow CRC to be allocated in ROM as well as RAM.